--- a/index.html
+++ b/index.html
@@ -4,29 +4,49 @@
 <span><i class="fas fa-bars"></i></span></button><div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none"><a class=navbar-brand href=/>Auggie Marignier</a></div><div class="navbar-collapse main-menu-item collapse justify-content-start" id=navbar-content><ul class="navbar-nav d-md-inline-flex"><li class=nav-item><a class=nav-link href=/publication><span>Publications</span></a></li><li class=nav-item><a class=nav-link href=/code><span>Codes</span></a></li><li class=nav-item><a class=nav-link href=/talk><span>Talks</span></a></li><li class=nav-item><a class=nav-link href=/cv><span>CV</span></a></li></ul></div><ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2"><li class=nav-item><a class="nav-link js-search" href=# aria-label=Search><i class="fas fa-search" aria-hidden=true></i></a></li><li class="nav-item dropdown theme-dropdown"><a href=# class=nav-link data-toggle=dropdown aria-haspopup=true aria-label="Display preferences"><i class="fas fa-moon" aria-hidden=true></i></a><div class=dropdown-menu><a href=# class="dropdown-item js-set-theme-light"><span>Light</span></a>
 <a href=# class="dropdown-item js-set-theme-dark"><span>Dark</span></a>
 <a href=# class="dropdown-item js-set-theme-auto"><span>Automatic</span></a></div></li></ul></div></nav></div><div class=page-body><span class="js-widget-page d-none"></span><section id=about class="home-section wg-about"><div class=home-section-bg></div><div class=container><div class=row><div class="col-12 col-lg-4"><div id=profile><img class="avatar avatar-circle" width=270 height=270 src=/authors/admin/avatar_hu15af1815708ffeb0ea210fd23a5ba8fa_2066971_270x270_fill_q75_lanczos_center.jpg alt="Auggie Marignier"><div class=portrait-title><h2>Auggie Marignier</h2><h3>Postdoctoral Fellow in Seismology</h3><h3><a href=https://earthsciences.anu.edu.au/ target=_blank rel=noopener><span>Research School of Earth Sciences, Australian National University</span></a></h3></div><ul class=network-icon aria-hidden=true><li><a href=mailto:augustin.marignier@anu.edu.au aria-label=envelope><i class="fas fa-envelope big-icon"></i></a></li><li><a href=https://twitter.com/auggiem23 target=_blank rel=noopener aria-label=twitter><i class="fab fa-twitter big-icon"></i></a></li><li><a href="https://scholar.google.co.uk/citations?user=9L1UbdoAAAAJ&amp;hl" target=_blank rel=noopener aria-label=graduation-cap><i class="fas fa-graduation-cap big-icon"></i></a></li><li><a href=https://github.com/auggiemarignier target=_blank rel=noopener aria-label=github><i class="fab fa-github big-icon"></i></a></li><li><a href=https://orcid.org/0000-0001-6778-1399 target=_blank rel=noopener aria-label=orcid><i class="ai ai-orcid big-icon"></i></a></li></ul></div></div><div class="col-12 col-lg-8"><h1>Biography</h1><div class=article-style><p>I am a postdoc in the Seismology & Mathematical Geophysics group at RSES at ANU, currently looking at characterising the sedimentary thickness across Australia using passive seismic methods.</p><p>I completed my PhD in Data Intensive Science at UCL in 2022. My research focused on solving large-scale inverse imaging problems using probabilistic methods, applied to seismological and cosmological problems.</p><p><i class="fas fa-download pr-1 fa-fw"></i> Download my <a href=/uploads/cv.pdf target=_blank>resumé</a>.</p></div><div class=row><div class=col-md-5><div class=section-subheading>Interests</div><ul class="ul-interests mb-0"><li>Data Science, Bayesian Inference and Machine Learning</li><li>Seismology</li><li>Cosmology</li></ul></div></div></div></div></div></section><section id=publications class="home-section wg-pages"><div class=home-section-bg></div><div class=container><div class=row><div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start"><h1 class=mb-0>Recent Publications</h1></div><div class="col-12 col-lg-8"><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"></span>(2023).
+<span class="article-metadata li-cite-author">A. Marignier,
+T. D. Kitching,
+J. D. McEwen,
+A. M. G. Ferreira</span>
+(2023).
 <a href=/publication/marignier-tdtmm/>Sparse Bayesian mass-mapping using trans-dimensional MCMC</a>.
 <em>OJA</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/marignier-tdtmm/cite.bib><i class="fas fa-quote-left"></i>
 Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://astro.theoj.org/article/81253-sparse-bayesian-mass-mapping-using-trans-dimensional-mcmc target=_blank rel=noopener><i class="fas fa-globe mr-1"></i>URL</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.21105/astro.2211.13963 target=_blank rel=noopener><i class="ai ai-doi mr-1"></i>DOI</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/auggiemarignier/tdtmassmapping target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"></span>(2023).
+<span class="article-metadata li-cite-author">A. Marignier</span>
+(2023).
 <a href=/publication/marignier-thesis/>From Dark Matter to the Earth's Deep Interior: There and Back Again</a>.
 <em>Doctoral Thesis (Ph.D), UCL</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/marignier-thesis/cite.bib><i class="fas fa-quote-left"></i>
 Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://discovery.ucl.ac.uk/id/eprint/10162902/ target=_blank rel=noopener><i class="fas fa-globe mr-1"></i>URL</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"></span>(2023).
+<span class="article-metadata li-cite-author">A. Marignier,
+J. D. McEwen,
+A. M. G. Ferreira,
+T. D. Kitching</span>
+(2023).
 <a href=/publication/marignier-s2-pxmcmc/>Posterior sampling for inverse imaging problems on the sphere in seismology and cosmology</a>.
 <em>RASTI</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/marignier-s2-pxmcmc/cite.bib><i class="fas fa-quote-left"></i>
 Cite</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1093/rasti/rzac010 target=_blank rel=noopener><i class="fas fa-globe mr-1"></i>URL</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1093/rasti/rzac010 target=_blank rel=noopener><i class="ai ai-doi mr-1"></i>DOI</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/auggiemarignier/pxmcmc target=_blank rel=noopener><i class="fab fa-github mr-1"></i>Code</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"></span>(2022).
+<span class="article-metadata li-cite-author">W. Sturgeon,
+A. M. G. Ferreira,
+L. Schardong,
+A. Marignier</span>
+(2022).
 <a href=/publication/sturgeon-wuscrst/>Crustal structure of the Western U.S. from Rayleigh and Love wave amplification data</a>.
 <em>JGR: Solid Earth, under review</em>.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.authorea.com/doi/full/10.1002/essoar.10512994.1 target=_blank rel=noopener><i class="fas fa-globe mr-1"></i>URL</a></p></div><div class=pub-list-item style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"></span>(2021).
+<span class="article-metadata li-cite-author">O. J. Cobb,
+C. G. R. Wallis,
+A. N. Mavor-Parker,
+A. Marignier,
+M. A. Price,
+M. d'Avezac,
+J. D. McEwen</span>
+(2021).
 <a href=/publication/cobb-s2cnn/>Efficient Generalized Spherical CNNs</a>.
 <em>ICLR</em>.<p><a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/publication/cobb-s2cnn/cite.bib><i class="fas fa-quote-left"></i>
 Cite</a>
